--- a/input.css
+++ b/input.css
@@ -10,9 +10,69 @@
     /* tracking-widest edited to have 0.3rem letter spacing */
     @apply border-2 border-black px-10 py-2 font-alata font-bold uppercase tracking-widest hover:bg-black hover:text-white;
   }
+
   .ficon:hover {
     filter: invert(53%) sepia(68%) saturate(434%) hue-rotate(121deg)
       brightness(101%) contrast(94%);
+  }
+
+  /* Hamburger Icon classes */
+
+  /* Rules for the parent hamburger container */
+  .hamburger {
+    cursor: pointer;
+    width: 24px;
+    height: 24px;
+    transition: all 0.2s;
+    /* relative position since the children will be positioned as absolute */
+    position: relative;
+  }
+
+  /* Rules for the children of the hambuarger container (lines) */
+  .hamburger-top,
+  .hamburger-middle,
+  .hamburger-bottom {
+    position: absolute;
+    width: 24px;
+    height: 2px;
+    /* they all start in the same position */
+    top: 0;
+    left: 0;
+    background: #fff;
+    transform: rotate(0);
+    transition: all 0.5s;
+  }
+
+  /* Rules for the middle hamburger line */
+  .hamburger-middle {
+    /* push it 7px down */
+    transform: translateY(7px);
+  }
+
+  /* Rules for the bottom hamburger line */
+  .hamburger-bottom {
+    /* push it 14px down */
+    transform: translateY(14px);
+  }
+
+  /* Rules to apply to the parent hamburger container when the "open" class is active */
+  .hamburger.open {
+    transform: rotate(90deg);
+  }
+
+  /* Rules to apply to the top line of the hamburger icon when the "open" class is active */
+  .hamburger.open .hamburger-top {
+    transform: rotate(45deg) translateY(6px) translateX(6px);
+  }
+
+  /* Rules to apply to the middle line of the hamburger icon when the "open" class is active */
+  .hamburger.open .hamburger-middle {
+    display: none;
+  }
+
+  /* Rules to apply to the bottom line of the hamburger icon when the "open" class is active */
+  .hamburger.open .hamburger-bottom {
+    transform: rotate(-45deg) translateY(6px) translateX(-6px);
   }
 }
 
